--- a/test-comfa-front/src/app/feature/personaje/layout/menu/menu.component.html
+++ b/test-comfa-front/src/app/feature/personaje/layout/menu/menu.component.html
@@ -1,3 +1,4 @@
 <div class="navbar-nav">
   <a class="nav-link" routerLink="/personajes" routerLinkActive="active">Personajes</a>
+  <a class="nav-link" routerLink="/personajes/importados" routerLinkActive="active">Personajes importados</a>
 </div>
