--- a/test-comfa-front/src/app/feature/personaje/pages/personajes-importados/personajes-importados.component.html
+++ b/test-comfa-front/src/app/feature/personaje/pages/personajes-importados/personajes-importados.component.html
@@ -1,7 +1,8 @@
 <div class="contenedor-padre">
     <div class="div-a-centrar-horizontal">
         <app-seeker
-          (busqueda)="buscarPersonajesImportados($event)">
+          (busqueda)="buscarPersonajesImportados($event)"
+          [cantidadPersonajes]="cantidadPersonajes">
         </app-seeker>
     </div>
 </div>
